--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,3 +10,7 @@ pydantic-settings==2.8.0
 pytest==8.2.2
 pytest-asyncio==0.24.0
 httpx==0.28.1
+email-validator==2.2.0
+pandas==2.2.2
+openpyxl==3.1.2
+reportlab==4.2.2
