--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,5 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@playwright/test": "^1.54.1"
   }
 }
